@@ -1,3 +1,8 @@
+2005-11-18  Edward Hervey  <edward@fluendo.com>
+
+	* gst/base/gstbasesink.c: (gst_base_sink_change_state): 
+	Also reset the ->current_* values in READY->PAUSED
+
 2005-11-18  Andy Wingo  <wingo@pobox.com>
 
 	* gst/net/gstnetclientclock.c (gst_net_client_clock_thread):
